Fixed off-centre button icons

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -538,7 +538,7 @@ body {
 
 .small-icon-button {
     position: absolute;
-    transform: translate(-50%, -70%);
+    transform: translate(-50%, -75%);
 }
 
 .stats-box {
